--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: Bebas Neue, sans-serif;
-  background: whitesmoke;
+  background: cyan;
 }
 
 h1 {
@@ -34,4 +34,25 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* Image Container */
+.image-container {
+  margin: 10px 30%;
+}
+
+.image-container img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+/* Media Query: Large Smartphone */
+@media screen and (max-width: 600px) {
+  h1 {
+    font-size: 20px;
+  }
+
+  .image-container {
+    margin: 10px;
+  }
 }
